--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
     "bson": "^1.0.4",
+    "decomment": "^0.9.1",
     "hadron-react-buttons": "^1.13.2",
     "hadron-react-components": "^1.14.1",
     "lodash.debounce": "^4.0.8",
