--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,9 @@ before_script:
   - sh -e /etc/init.d/xvfb start
 before_install:
   - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" >> .npmrc
-script: npm run ci
+script: 
+  - npm run check
+  - npm test
 cache:
   directories:
     - $HOME/.electron
