--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,7 @@
         ["es2015"]
       ],
       "plugins": [
+        "transform-decorators-legacy",
         "react-hot-loader/babel",
         "syntax-object-rest-spread",
         "transform-object-rest-spread",
@@ -17,9 +18,10 @@
   },
   "presets": [
     "react",
-    ['es2015', {'modules': false}]
+    ["es2015", {"modules": false}]
   ],
   "plugins": [
+    "transform-decorators-legacy",
     "react-hot-loader/babel",
     "syntax-object-rest-spread",
     "transform-object-rest-spread",
