--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "check": "mongodb-js-precommit './src/**/*{.js,.jsx}' './test/**/*.js' './electron/**/*.js' './config/**/*{.js,.jsx}'",
     "link-plugin": "./scripts/link.sh",
     "unlink-plugin": "./scripts/unlink.sh",
-    "prepublish": "npm run compile"
+    "prepublish": "npm run compile",
+    "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "precommit": [
     "check"
@@ -43,6 +44,11 @@
   "devDependencies": {
     "@mongodb-js/compass-crud": "^6.1.2",
     "@mongodb-js/compass-field-store": "^2.0.0",
+    "@storybook/addon-actions": "^3.4.11",
+    "@storybook/addon-knobs": "^3.4.11",
+    "@storybook/addon-links": "^3.4.11",
+    "@storybook/addon-options": "^3.4.11",
+    "@storybook/react": "^3.4.11",
     "autoprefixer": "^7.1.2",
     "babel-cli": "^6.10.1",
     "babel-core": "^6.24.1",
@@ -127,13 +133,14 @@
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.4.5",
     "webpack-merge": "^4.1.1",
-    "webpack-node-externals": "^1.6.0",
+    "webpack-node-externals": "^1.7.2",
     "webpack-sources": "1.0.1"
   },
   "dependencies": {
-    "bson": "^1.0.4",
+    "bson": "^4.0.1",
     "bson-transpilers": "^0.9.0",
     "decomment": "^0.9.1",
+    "is-electron-renderer": "^2.0.1",
     "lodash.debounce": "^4.0.8",
     "lodash.isempty": "^4.4.0",
     "mongodb-extended-json": "^1.10.0",
