--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,13 @@ script: npm run ci
 cache:
   directories:
     - $HOME/.electron
+after_success:
+  - npm run storybook:ghpages
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN 
+  keep-history: true
+  local_dir: .ghpages
+  on:
+    branch: 3.0.0
