--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "link-plugin": "./scripts/link.sh",
     "unlink-plugin": "./scripts/unlink.sh",
     "prepublish": "npm run compile",
-    "storybook": "start-storybook -p 9001 -c .storybook"
+    "storybook": "start-storybook -p 9001 -c .storybook",
+    "storybook:ghpages": "build-storybook -c .storybook -o .ghpages"
   },
   "precommit": [
     "check"
