--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "unlink-plugin": "./scripts/unlink.sh",
     "prepublish": "npm run compile",
     "storybook": "start-storybook -p 9001 -c .storybook",
-    "storybook:ghpages": "build-storybook -c .storybook -o .ghpages"
+    "storybook:ghpages": "cross-env NODE_ENV=production build-storybook -c .storybook -o .ghpages"
   },
   "precommit": [
     "check"
