--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "storybook:ghpages": "cross-env NODE_ENV=production build-storybook -c .storybook -o .ghpages",
     "poststorybook:ghpages": "npm run analyze ",
     "preanalyze": "mkdir -p .ghpages && cross-env NODE_ENV=production webpack --profile --json --config ./config/webpack.prod.config.js > .ghpages/stats.json",
-    "analyze": "webpack-bundle-analyzer .ghpages/stats.json --no-open  --report .ghpages/report.html"
+    "analyze": "webpack-bundle-analyzer .ghpages/stats.json --no-open  --report .ghpages/report.html --mode static --bundleDir lib"
   },
   "precommit": [
     "check"
