--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "clean": "rimraf lib",
     "precompile": "npm run clean",
     "compile": "cross-env NODE_ENV=production webpack --config ./config/webpack.prod.config.js --progress",
+    "prestart": "electron-rebuild --force --only keytar",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack.dev.config.js",
     "start:watch": "npm run clean && webpack --config ./config/webpack.watch.config.js",
     "test": "cross-env NODE_ENV=test mocha-webpack \"./src/**/*.spec.js\"",
@@ -81,6 +82,7 @@
     "debug": "^4.1.1",
     "electron": "^4.0.8",
     "electron-packager": "^13.1.1",
+    "electron-rebuild": "^1.8.4",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.0",
     "eslint-config-mongodb-js": "^3.0.1",
@@ -116,6 +118,7 @@
     "mongodb-ace-theme": "^0.0.1",
     "mongodb-connection-model": "^13.0.1",
     "mongodb-data-service": "^12.4.17",
+    "mongodb-js-metrics": "^4.2.0",
     "mongodb-js-precommit": "^2.0.0",
     "mongodb-reflux-store": "0.0.1",
     "mongodb-schema": "^8.2.3",
@@ -136,6 +139,7 @@
     "shebang-loader": "0.0.1",
     "sinon": "^7.2.7",
     "sinon-chai": "^3.3.0",
+    "storage-mixin": "^3.0.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.6",
