--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     "mongodb-extended-json": "^1.10.1",
     "mongodb-ns": "^2.0.0",
     "mongodb-query-parser": "^1.3.0",
+    "mongodb-redux-common": "0.0.1",
     "mongodb-stage-validator": "^0.0.9",
     "react-bootstrap": "^0.32.4",
     "react-dnd": "^7.3.2",
