--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@mongodb-js/compass-crud": "^6.2.4",
     "@mongodb-js/compass-field-store": "^4.0.4",
     "bson-transpilers": "^0.10.0",
+    "electron": "^4.0.8",
     "hadron-react-buttons": "^3.1.0",
     "hadron-react-components": "^3.2.1",
     "mongodb-ace-autocompleter": "^0.1.0",
