--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
       "@hot-loader/react-dom",
       "@mongodb-js/compass-crud",
       "@mongodb-js/compass-field-store",
+      "@mongodb-js/compass-export-to-language",
       "bson-transpilers",
       "mongodb-js-metrics",
       "react-dom",
@@ -45,6 +46,7 @@
     "@hot-loader/react-dom": "^16.8.4",
     "@mongodb-js/compass-crud": "^6.2.4",
     "@mongodb-js/compass-field-store": "^4.0.4",
+    "@mongodb-js/compass-export-to-language": "^4.0.1",
     "bson-transpilers": "^0.11.5",
     "electron": "^4.0.8",
     "hadron-react-buttons": "^3.1.0",
@@ -63,6 +65,7 @@
     "@hot-loader/react-dom": "^16.8.4",
     "@mongodb-js/compass-crud": "^6.2.4",
     "@mongodb-js/compass-field-store": "^4.0.4",
+    "@mongodb-js/compass-export-to-language": "^4.0.1",
     "@storybook/addon-actions": "^5.0.3",
     "@storybook/addon-knobs": "^5.0.3",
     "@storybook/addon-links": "^5.0.3",
