COMPASS-4213: Adding back Electron to peer deps

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "bson-transpilers": "^0.13.3",
     "hadron-react-buttons": "^3.1.0",
     "hadron-react-components": "^3.2.1",
+    "electron": "*",
     "mongodb-ace-autocompleter": "*",
     "mongodb-ace-mode": "*",
     "mongodb-ace-theme": "*",
