--- a/package.json
+++ b/package.json
@@ -182,6 +182,7 @@
     "mongodb-extended-json": "^1.10.1",
     "mongodb-ns": "^2.0.0",
     "mongodb-redux-common": "^0.0.2",
+    "re-resizable": "^6.9.0",
     "react-bootstrap": "^0.32.4",
     "react-dnd": "^10.0.2",
     "react-dnd-html5-backend": "^10.0.2",
