--- a/package.json
+++ b/package.json
@@ -139,7 +139,7 @@
     "mongodb-data-service": "^16.0.0",
     "mongodb-js-metrics": "^5.0.0",
     "mongodb-js-precommit": "^2.0.0",
-    "mongodb-query-parser": "^2.1.2",
+    "mongodb-query-parser": "^2.3.0",
     "mongodb-reflux-store": "0.0.1",
     "mongodb-schema": "^8.2.3",
     "mongodb-stitch-browser-sdk": "^4.3.2",
@@ -172,6 +172,8 @@
   "dependencies": {
     "@leafygreen-ui/badge": "^4.0.2",
     "@leafygreen-ui/banner": "^3.0.4",
+    "acorn-loose": "^8.0.2",
+    "astring": "^1.7.0",
     "bson": "^4.0.2",
     "decomment": "^0.9.2",
     "is-electron-renderer": "^2.0.1",
